# smb-connector

./: .gitignore  0002-Added-smbc_SetConfiguration-which-lets-the-user-set-.patch  0002-Added-smbc_SetLogCallback-which-lets-third-party-cod.patch  0003-s3-libsmbclient-Add-new-function-SMBC_readdirplus_ct.patch  0004-s3-libsmbclient-Add-function-add_dirplus-to-fill-the.patch  0005-s3-libsmbclient-Add-readdirplus-cleanup-code-on-dire.patch  0006-s3-libsmbclient-Add-internal-external-structures-nee.patch  0007-s3-client-Add-btime_ts-to-struct-finfo.patch  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  LICENSE.txt  NOTICE.txt  README  README.md  build_all.sh  build_debug.sh  build_rel.sh  build_samba_debug.sh  build_samba_rel.sh  cmake_debug.sh  cmake_rel.sh  del_unused_lib.sh  generate_doc.sh  generate_gcov.sh  generate_proto_buf.sh  open_source_license_smb-connector_1.0.0_GA.txt  perf_client.sh  perf_server.sh  smb-connector.conf  smb.conf  smbconnector.doxygen  unit_test.sh
src/: Main.cpp
src/base/: Common.h  Configuration.cpp  Configuration.h  Constants.h  CustomLayout.cpp  CustomLayout.h  Error.cpp  Error.h  Log.cpp  Log.h  Log4Cpp.cpp  Log4Cpp.h  Protocol.cpp  Protocol.h
src/core/: Client.cpp  Client.h  ISmbConnector.h  Server.cpp  Server.h  SessionManager.cpp  SessionManager.h
src/packet/: AddFolderPacketCreator.cpp  AddFolderPacketCreator.h  AddFolderPacketParser.cpp  AddFolderPacketParser.h  DeletePacketCreator.cpp  DeletePacketCreator.h  DeletePacketParser.cpp  DeletePacketParser.h  DownloadPacketCreator.cpp  DownloadPacketCreator.h  DownloadPacketParser.cpp  DownloadPacketParser.h  IPacketCreator.cpp  IPacketCreator.h  IPacketParser.cpp  IPacketParser.h  OpenDirPacketCreator.cpp  OpenDirPacketCreator.h  OpenDirReqPacketParser.cpp  OpenDirReqPacketParser.h  Packet.cpp  Packet.h  TestConnectionPacketCreator.cpp  TestConnectionPacketCreator.h  TestConnectionPacketParser.cpp  TestConnectionPacketParser.h  UploadPacketCreator.cpp  UploadPacketCreator.h  UploadPacketParser.cpp  UploadPacketParser.h
src/processor/: AddFolderProcessor.cpp  AddFolderProcessor.h  DeleteProcessor.cpp  DeleteProcessor.h  DownloadProcessor.cpp  DownloadProcessor.h  OpenDirReqProcessor.cpp  OpenDirReqProcessor.h  RequestProcessor.cpp  RequestProcessor.h  TestConnection.cpp  TestConnection.h  UploadProcessor.cpp  UploadProcessor.h
src/protobuf/: common.proto  request.proto  response.proto
src/protocol_buffers/: common.pb.cc  common.pb.h  request.pb.cc  request.pb.h  response.pb.cc  response.pb.h
src/smb/: SmbClient.cpp  SmbClient.h
src/socket/: Epoll.cpp  Epoll.h  UnixDomainSocket.cpp  UnixDomainSocket.h
unit-tests/: AddFolderCreatorTests.cpp  AddFolderParserTests.cpp  AddFolderProcessorTests.cpp  ConfigurationTests.cpp  DeletePacketCreatorTests.cpp  DeletePacketParserTests.cpp  DeleteProcessorTests.cpp  DownloadPacketCreatorTests.cpp  DownloadPacketParserTests.cpp  DownloadProcessorTests.cpp  LogTests.cpp  OpenDirPacketCreatorTests.cpp  OpenDirPacketParserTests.cpp  OpenDirTests.cpp  ProtocolTests.cpp  SessionManagerTests.cpp  TestConnectionPacketCreatorTests.cpp  TestConnectionPacketParserTests.cpp  TestConnectionTests.cpp  UnixDomainSocketTests.cpp  UploadPacketCreatorTests.cpp  UploadPacketParserTests.cpp  UploadProcessorTests.cpp
